# kdbxtool

./: .gitignore  README.md  SECURITY_AUDIT_AGENTS.md  SECURITY_AUDIT_REPORT.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml
docs/: advanced.md  conf.py  getting-started.md  hardware-keys.md  index.md  migration.md
docs/_templates/: version-switcher.html
src/kdbxtool/: __init__.py  database.py  exceptions.py
src/kdbxtool/models/: __init__.py  entry.py  group.py  times.py
src/kdbxtool/parsing/: __init__.py  context.py  header.py  kdbx3.py  kdbx4.py
src/kdbxtool/security/: __init__.py  challenge_response.py  crypto.py  fido2.py  kdf.py  kek.py  keyfile.py  totp.py  yubikey.py
src/kdbxtool/testing/: __init__.py
tests/: HARDWARE_TESTING.md  test_cipher_config.py  test_custom_icons.py  test_database.py  test_empty_group.py  test_extended_search.py  test_fido2.py  test_field_references.py  test_hardware_keys.py  test_history.py  test_hypothesis.py  test_kdbx3.py  test_kdf_config.py  test_kek.py  test_keyfile.py  test_merge.py  test_models.py  test_move_operations.py  test_multi_key.py  test_parsing_context.py  test_parsing_header.py  test_parsing_kdbx4.py  test_reindex.py  test_reload.py  test_security_crypto.py  test_security_kdf.py  test_seed_regeneration.py  test_totp.py  test_transformed_key.py  test_twofish.py  test_yubikey.py  test_yubikey_hardware.py
tests/fixtures/: test4_twofish.kdbx
