[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kdbxtool"
version = "0.1.0"
description = "A modern, secure Python library for reading and writing KeePass KDBX databases"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Corey Leavitt" },
]
keywords = ["keepass", "kdbx", "password", "security", "encryption"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Typing :: Typed",
]
dependencies = [
    "argon2-cffi>=23.1.0",
    "pycryptodomex>=3.20.0",
    "defusedxml>=0.7.0",
]

[project.optional-dependencies]
twofish = ["oxifish>=0.1.1"]
yubikey = ["yubikey-manager>=5.0.0"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "mypy>=1.0.0",
    "types-defusedxml>=0.7.0",
    "lxml>=5.0.0",  # Required for mypy --html-report
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/coreyleavitt/kdbxtool"
Repository = "https://github.com/coreyleavitt/kdbxtool"

[tool.hatch.build.targets.wheel]
packages = ["src/kdbxtool"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B", "C4", "PIE", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=kdbxtool --cov-report=term-missing"
